--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,20 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
+ext {
+    //dependencies version
+    appCompatVersion = '1.2.0'
+    coreVersion = '1.3.2'
+    constraintLayoutVersion = '2.0.4'
+    junitVersion = '4.13.2'
+    junitExtversion = '1.1.2'
+    espressoVersion = '3.3.0'
+    androidTestVersion = '1.3.0'
+
+    materialVersion = '1.2.1'
+    recyclerViewVersion = '1.2.1'
+    glideVersion = '4.11.0'
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
